--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,43 @@
+@font-face {
+    src: local('EB Garamond Medium'),
+         local('EBGaramondmedium'),
+         local('eb-garamond-medium'),
+         url(./fonts/ebgaramondmedium.woff2) format('woff2'),
+         url(./fonts/ebgaramondmedium.woff) format('woff'),
+         url(./fonts/ebgaramondmedium/ttf) format('ttf');
+    font-family: 'EB Garamond';
+    font-weight: 500
+  }
 
+@font-face {
+    src: local('EB Garamond Regular'),
+         local('EBGaramondregular'),
+         local('eb-garamond-regular'),
+         url(./fonts/ebgaramondregular.woff2) format('woff2'),
+         url(./fonts/ebgaramondmedium.woff) format('woff'),
+         url(./fonts/ebgaramondmedium.ttf) format('ttf');
+    font-family: 'EB Garamond';
+    font-weight: 400
+  }
+
+  @font-face {
+    src: local('Interregular')
+         local('Inter regular'),
+         local('Inter-regular'),
+         url(./fonts/interregular.woff2) format('woff2'),
+         url(./fonts/interregular.woff) format('woff'),
+         url(./fonts/interregular.ttf) format('ttf');
+    font-family: 'Inter';
+    font-weight: 400
+  }
+
+  @font-face {
+    src: local('Interbold'),
+         local('Inter bold'),
+         local('inter-bold'),
+         url(./fonts/interbold.woff2) format('woff2'),
+         url(./fonts/interbold.woff) format('woff'),
+         url(./fonts/interbold.ttf) format('ttf');
+    font-family: 'Inter';
+    font-weight: 700
+  }
