--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,9 +2,9 @@
     src: local('EB Garamond Medium'),
          local('EBGaramondmedium'),
          local('eb-garamond-medium'),
-         url(./fonts/ebgaramondmedium.woff2) format('woff2'),
-         url(./fonts/ebgaramondmedium.woff) format('woff'),
-         url(./fonts/ebgaramondmedium/ttf) format('ttf');
+         url(ebgaramondmedium.woff2) format('woff2'),
+         url(ebgaramondmedium.woff) format('woff'),
+         url(ebgaramondmedium/ttf) format('ttf');
     font-family: 'EB Garamond';
     font-weight: 500
   }
@@ -13,9 +13,9 @@
     src: local('EB Garamond Regular'),
          local('EBGaramondregular'),
          local('eb-garamond-regular'),
-         url(./fonts/ebgaramondregular.woff2) format('woff2'),
-         url(./fonts/ebgaramondmedium.woff) format('woff'),
-         url(./fonts/ebgaramondmedium.ttf) format('ttf');
+         url(ebgaramondregular.woff2) format('woff2'),
+         url(ebgaramondmedium.woff) format('woff'),
+         url(ebgaramondmedium.ttf) format('ttf');
     font-family: 'EB Garamond';
     font-weight: 400
   }
@@ -24,9 +24,9 @@
     src: local('Interregular')
          local('Inter regular'),
          local('Inter-regular'),
-         url(./fonts/interregular.woff2) format('woff2'),
-         url(./fonts/interregular.woff) format('woff'),
-         url(./fonts/interregular.ttf) format('ttf');
+         url(interregular.woff2) format('woff2'),
+         url(interregular.woff) format('woff'),
+         url(interregular.ttf) format('ttf');
     font-family: 'Inter';
     font-weight: 400
   }
@@ -35,9 +35,9 @@
     src: local('Interbold'),
          local('Inter bold'),
          local('inter-bold'),
-         url(./fonts/interbold.woff2) format('woff2'),
-         url(./fonts/interbold.woff) format('woff'),
-         url(./fonts/interbold.ttf) format('ttf');
+         url(interbold.woff2) format('woff2'),
+         url(interbold.woff) format('woff'),
+         url(interbold.ttf) format('ttf');
     font-family: 'Inter';
     font-weight: 700
   }
