--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: rgb(84, 111, 20);
+  background-color: #1e1e1e;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
 }
@@ -51,7 +51,6 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 132px;
 }
 
 .cover {
@@ -71,18 +70,15 @@ p {
 
 .reasons {
   padding: 40px 20px 40px 20px;
-  height: 1368px;
   row-gap: 32px;
 }
 
 .how-to {
   padding: 40px 20px 60px 20px;
-  height: 1849px;
 }
 
 .footer {
   padding: 20px 20px 20px 20px;
-  height: 62px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -101,7 +97,6 @@ p {
 .header__menu {
   display: flex;
   width: 74px;
-  height: 88;
 }
 
 .header__menu-list {
@@ -117,13 +112,12 @@ p {
 }
 
 .header__menu-item {
-  text-decoration: none;
+  text-decoration: underline;
   color: #f5f5f5;
 }
 
 .header__menu-item_active {
-  text-decoration: underline;
-  color: #f5f5f5;
+  text-decoration: none;
 }
 
 .header__menu-link {
@@ -133,7 +127,7 @@ p {
 
 .cover__title {
   color: #fff;
-  font-family: "EB Garamond", serif;
+  font-family: "EB Garamond", "Times New Roman", serif;
   font-size: 72px;
   font-style: normal;
   font-weight: 400;
@@ -192,11 +186,11 @@ p {
 }
 
 .content-section__subtitle {
-  font-family: "EB Garamond", serif;
+  font-family: "EB Garamond", "Times New Roman", serif;
   font-size: 28px;
   font-style: normal;
   font-weight: 500;
-  line-height: 115%; /* 32.2px */
+  line-height: 115%;
 }
 
 .content-section__introduction {
@@ -206,17 +200,16 @@ p {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 135%; /* 27px */
+  line-height: 135%;
 }
 
 .content-section__list {
-  padding-top: 32px;
+  padding-top: 30px;
   padding-left: 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 16px;
-  height: 865px;
 }
 
 .content-section__list-item {
@@ -225,7 +218,7 @@ p {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 21.6px;
+  line-height: 135%; /*21.6px;*/
 }
 
 .content-section__list-accent {
@@ -235,19 +228,6 @@ p {
   font-style: normal;
   font-weight: 700;
   line-height: 135%; /* 21.6px */
-}
-
-.card {
-  padding: 20px;
-  border-radius: 30px;
-}
-
-.cards-list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  row-gap: 32px;
-  padding-top: 35px;
 }
 
 .card_theme_dark {
@@ -260,38 +240,18 @@ p {
   color: #131313;
 }
 
-.card_text-only {
+.card {
+  padding: 20px;
+  border-radius: 30px;
   line-height: 135%;
 }
 
-h4.card_text-only {
-  font-family: "EB Garamond";
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 500;
-}
-
-div.card_text-only {
-  padding-top: 8px;
-}
-
-.card__author {
-  min-height: 128px;
-}
-
-.card__author-photo {
-  width: 100px;
-  height: 100px;
-}
-
-.card__author-name {
-  padding-top: 5px;
-  color: #f5f5f5;
-  font-family: "Inter";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 135%; /* 21.6px */
+.cards-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  padding-top: 30px;
 }
 
 .card__content {
@@ -301,8 +261,8 @@ div.card_text-only {
 
 .card__title {
   padding-top: 8px;
-
-  font-family: "EB Garamond";
+  padding-bottom: 8px;
+  font-family: "EB Garamond", "Times New Roman", serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 500;
@@ -310,14 +270,50 @@ div.card_text-only {
 }
 
 .card__text {
-  padding-top: 8px;
+  line-height: 135%; /* 21.6px */
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Inter", "Arial", sans-serif;
+}
 
+.card_text-only {
+  line-height: 135%;
+}
+
+h4.card_text-only {
+  padding-bottom: 8px;
+  font-family: "EB Garamond", "Times New Roman", serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 135%; /* 29.7px */
+}
+
+.card__author {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.card__author-photo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.card__author-name {
+  padding-top: 3px;
+  color: #f5f5f5;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
   line-height: 135%; /* 21.6px */
 }
 
 .footer__copy {
   width: 92px;
-  height: 22px;
 }
 
 .footer__links {
@@ -330,7 +326,7 @@ div.card_text-only {
 .footer__links-item {
   text-decoration: none;
   color: #f5f5f5;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
